add our-geography and eslint

--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.26.0",
+    "eslint-plugin-react": "^7.31.10",
     "prettier": "^2.7.1",
     "styled-components": "^5.3.6",
     "styled-normalize": "^8.0.7",
