--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,12 +1,32 @@
 {
-  'printWidth': 80,
+  'printWidth': 100,
   'tabWidth': 2,
   'useTabs': false,
   'semi': true,
   'singleQuote': true,
+  'jsxSingleQuote': true,
   'trailingComma': 'all',
   'bracketSpacing': true,
+  'bracketSameLine': false,
   'jsxBracketSameLine': false,
-  'arrowParens': 'avoid',
+  'arrowParens': 'always',
   'proseWrap': 'always',
+  'importOrder':
+    [
+      '<THIRD_PARTY_MODULES>',
+      '^redux/(.*)$',
+      '^service/(.*)$',
+      '^hooks/(.*)$',
+      '^pages/(.*)$',
+      '^components/(.*)$',
+      '^styles/(.*)$',
+      '^helpers/(.*)$',
+      '^assets/(.*)$',
+      '^interfaces$',
+      '^types$',
+      '^data/(.*)$',
+      '^./(.*)$',
+    ],
+  'importOrderSeparation': true,
+  'importOrderSortSpecifiers': true,
 }
